--- a/study/index.html
+++ b/study/index.html
@@ -97,25 +97,150 @@
                         <p>正在学习-使用对象</p>
                     </li>
                 </ul>
-                    <a class="all_course">全部课程</a>
+                <a class="all_course">全部课程</a>
             </div>
         </div>
     </div>
     <div class="tuijian_bak">
         <div class="jingpintuijian ceneterwidth">
             <a class="tujian">精品推荐<a>
-            <ul>
-                <li><a>JQuery</a></li>
-                <li><a>Spark</a></li>
-                <li><a>MySQL</a></li>
-                <li><a>JavaWeb</a></li>
-                <li><a>MySQL</a></li>
-                <li><a>JavaWeb</a></li>
-            </ul>
-            <a class="xiugaixingqu">修改兴趣</a>
-       </div>
+                    <ul>
+                        <li><a>Spark</a></li>
+                        <li><a>MySQL</a></li>
+                        <li><a>JavaWeb</a></li>
+                        <li><a>MySQL</a></li>
+                        <li><a>JavaWeb</a></li>
+                    </ul>
+                    <a class="xiugaixingqu">修改兴趣</a>
+        </div>
     </div>
-    
+    <div class="ceneterwidth clearfix">
+        <div class="info">
+            <h4>精品推荐</h4>
+            <a>查看全部</a>
+        </div>
+        <ul class="photo">
+            <li>
+                <img src="images/tuijian.jpg">
+                <div class="detail">
+                    <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                    <p><span>高级</span>～1125人在学习</p>
+                </div>
+            </li>
+            <li>
+                <img src="images/tuijian.jpg">
+                <div class="detail">
+                    <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                    <p><span>高级</span>～1125人在学习</p>
+                </div>
+            </li>
+            <li>
+                <img src="images/tuijian.jpg">
+                <div class="detail">
+                    <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                    <p><span>高级</span>～1125人在学习</p>
+                </div>
+            </li>
+            <li>
+                <img src="images/tuijian.jpg">
+                <div class="detail">
+                    <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                    <p><span>高级</span>～1125人在学习</p>
+                </div>
+            </li>
+            <li>
+                <img src="images/tuijian.jpg">
+                <div class="detail">
+                    <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                    <p><span>高级</span>～1125人在学习</p>
+                </div>
+            </li>
+            <li>
+                <img src="images/tuijian.jpg">
+                <div class="detail">
+                    <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                    <p><span>高级</span>～1125人在学习</p>
+                </div>
+            </li>
+            <li>
+                <img src="images/tuijian.jpg">
+                <div class="detail">
+                    <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                    <p><span>高级</span>～1125人在学习</p>
+                </div>
+            </li>
+            <li>
+                <img src="images/tuijian.jpg">
+                <div class="detail">
+                    <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                    <p><span>高级</span>～1125人在学习</p>
+                </div>
+            </li>
+            <li>
+                <img src="images/tuijian.jpg">
+                <div class="detail">
+                    <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                    <p><span>高级</span>～1125人在学习</p>
+                </div>
+            </li>
+            <li>
+                <img src="images/tuijian.jpg">
+                <div class="detail">
+                    <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                    <p><span>高级</span>～1125人在学习</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <div class="ceneterwidth">
+        <div class="biancheng">
+            <h4>编程入门</h4>
+            <ul>
+                <li><a>热门</a></li>
+                <li><a>初级</a></li>
+                <li><a>中级</a></li>
+                <li><a>高级</a></li>
+            </ul>
+            <a>查看全部</a>
+        </div>
+        <div class="biancheng_content">
+            <img src="images/biancheng_nav.jpg">
+            <div class="content_right">
+                <img>
+                <ul class="biancheng_kecheng">
+                    <li>
+                        <img src="images/tuijian.jpg">
+                        <div class="detail">
+                            <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                            <p><span>高级</span>～1125人在学习</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="images/tuijian.jpg">
+                        <div class="detail">
+                            <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                            <p><span>高级</span>～1125人在学习</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="images/tuijian.jpg">
+                        <div class="detail">
+                            <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                            <p><span>高级</span>～1125人在学习</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="images/tuijian.jpg">
+                        <div class="detail">
+                            <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                            <p><span>高级</span>～1125人在学习</p>
+                        </div>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
