--- a/study/index.html
+++ b/study/index.html
@@ -193,7 +193,7 @@
         </ul>
     </div>
     <div class="ceneterwidth">
-        <div class="biancheng">
+        <div class="biancheng clearfix">
             <h4>编程入门</h4>
             <ul>
                 <li><a>热门</a></li>
@@ -203,11 +203,11 @@
             </ul>
             <a>查看全部</a>
         </div>
-        <div class="biancheng_content">
-            <img src="images/biancheng_nav.jpg">
-            <div class="content_right">
-                <img>
-                <ul class="biancheng_kecheng">
+        <div class="biancheng_detail clearfix">
+            <img src="images/biancheng_nav.jpg"> </img>
+            <div class="biancheng_nav_right">
+                <img src="images/right-top.jpg"> </img>
+                <ul class="biancheng_bottom">
                     <li>
                         <img src="images/tuijian.jpg">
                         <div class="detail">
@@ -236,11 +236,194 @@
                             <p><span>高级</span>～1125人在学习</p>
                         </div>
                     </li>
-
                 </ul>
             </div>
         </div>
     </div>
+    <div class="ceneterwidth">
+        <div class="biancheng shuju">
+            <h4>数据分析师</h4>
+            <ul>
+                <li><a>热门</a></li>
+                <li><a>初级</a></li>
+                <li><a>中级</a></li>
+                <li><a>高级</a></li>
+            </ul>
+            <a>查看全部</a>
+        </div>
+        <div class="biancheng_detail">
+            <img src="images/shujufenxishi.jpg"> </img>
+            <div class="biancheng_nav_right">
+                <img src="images/pytonshuju.jpg"> </img>
+                <ul class="biancheng_bottom">
+                    <li>
+                        <img src="images/shuju.jpg">
+                        <div class="detail">
+                            <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                            <p><span>高级</span>～1125人在学习</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="images/shuju.jpg">
+                        <div class="detail">
+                            <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                            <p><span>高级</span>～1125人在学习</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="images/shuju.jpg">
+                        <div class="detail">
+                            <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                            <p><span>高级</span>～1125人在学习</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="images/shuju.jpg">
+                        <div class="detail">
+                            <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                            <p><span>高级</span>～1125人在学习</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="ceneterwidth">
+        <div class="biancheng shuju">
+            <h4>机器学习工程师</h4>
+            <ul>
+                <li><a>热门</a></li>
+                <li><a>初级</a></li>
+                <li><a>中级</a></li>
+                <li><a>高级</a></li>
+            </ul>
+            <a>查看全部</a>
+        </div>
+        <ul class="jiqixuexi clearfix">
+            <li>
+                <img src="images/jiqixuexi.jpg">
+                <div class="detail">
+                    <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                    <p><span>高级</span>～1125人在学习</p>
+                </div>
+            </li>
+            <li>
+                <img src="images/jiqixuexi.jpg">
+                <div class="detail">
+                    <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                    <p><span>高级</span>～1125人在学习</p>
+                </div>
+            </li>
+            <li>
+                <img src="images/jiqixuexi.jpg">
+                <div class="detail">
+                    <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                    <p><span>高级</span>～1125人在学习</p>
+                </div>
+            </li>
+            <li>
+                <img src="images/jiqixuexi.jpg">
+                <div class="detail">
+                    <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                    <p><span>高级</span>～1125人在学习</p>
+                </div>
+            </li>
+            <li>
+                <img src="images/jiqixuexi.jpg">
+                <div class="detail">
+                    <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                    <p><span>高级</span>～1125人在学习</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <div class="ceneterwidth clearfix">
+        <div class="biancheng shuju">
+            <h4>前端开发工程师</h4>
+            <ul>
+                <li><a>热门</a></li>
+                <li><a>初级</a></li>
+                <li><a>中级</a></li>
+                <li><a>高级</a></li>
+            </ul>
+            <a>查看全部</a>
+        </div>
+        <ul class="jiqixuexi clearfix">
+            <li>
+                <img src="images/frontengineer.jpg">
+                <div class="detail">
+                    <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                    <p><span>高级</span>～1125人在学习</p>
+                </div>
+            </li>
+            <li>
+                <img src="images/frontengineer.jpg">
+                <div class="detail">
+                    <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                    <p><span>高级</span>～1125人在学习</p>
+                </div>
+            </li>
+            <li>
+                <img src="images/frontengineer.jpg">
+                <div class="detail">
+                    <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                    <p><span>高级</span>～1125人在学习</p>
+                </div>
+            </li>
+            <li>
+                <img src="images/frontengineer.jpg">
+                <div class="detail">
+                    <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                    <p><span>高级</span>～1125人在学习</p>
+                </div>
+            </li>
+            <li>
+                <img src="images/frontengineer.jpg">
+                <div class="detail">
+                    <h4>Think PHP 5.0 博客系统实战项目演练</h4>
+                    <p><span>高级</span>～1125人在学习</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <footer class="foot">
+        <div class="ceneterwidth">
+            <div class="foot_left">
+                <img src="images/logo.png">
+                <p>
+                    学成在线致力于普及中国最好的教育它与中国最好的教育它与中国一流大学和机构合作
+                    提供在线课程。
+                    ~2017年XTCG Inc.保留所有权利。-沪ICP备15025210号
+                </p>
+                <a>下载app</a>
+            </div>
+            <div class="link">
+                <dl>
+                    <dt>关于学成网</dt>
+                    <dd>关于</dd>
+                    <dd>管理团队</dd>
+                    <dd>工作机会</dd>
+                    <dd>客户服务</dd>
+                    <dd>帮助</dd>
+                </dl>
+                <dl>
+                    <dt>新手指南</dt>
+                    <dd>如何注册</dd>
+                    <dd>如何选课</dd>
+                    <dd>如何拿到毕业证</dd>
+                    <dd>学分是什么</dd>
+                    <dd>考试未通过怎么办</dd>
+                </dl>
+                <dl>
+                    <dt>合作伙伴</dt>
+                    <dd>合作机构</dd>
+                    <dd>合作导师</dd>
+                </dl>
+            </div>
+        </div>
+
+
+    </footer>
 </body>
 
 </html>
