--- a/test/a.html
+++ b/test/a.html
@@ -4,7 +4,7 @@
 
     </head>
     <body>
-     <button onclick="get"
+     <button onclick="get"></button>
     </body>
     <script type="text/javascript">
         function getUserIP(onNewIP) { // onNewIp - your listener function for new IPs
