--- a/study/index.html
+++ b/study/index.html
@@ -209,6 +209,7 @@
                 <img src="images/right-top.jpg"> </img>
                 <ul class="biancheng_bottom">
                     <li>
+                        <em><img class="hot" src="images/hot.png"></em>
                         <img src="images/tuijian.jpg">
                         <div class="detail">
                             <h4>Think PHP 5.0 博客系统实战项目演练</h4>
@@ -216,6 +217,7 @@
                         </div>
                     </li>
                     <li>
+                        <em><img class="hot" src="images/hot.png"></em>
                         <img src="images/tuijian.jpg">
                         <div class="detail">
                             <h4>Think PHP 5.0 博客系统实战项目演练</h4>
@@ -223,6 +225,7 @@
                         </div>
                     </li>
                     <li>
+                        <em><img class="hot" src="images/hot.png"></em>
                         <img src="images/tuijian.jpg">
                         <div class="detail">
                             <h4>Think PHP 5.0 博客系统实战项目演练</h4>
@@ -230,6 +233,7 @@
                         </div>
                     </li>
                     <li>
+                        <em><img class="hot" src="images/hot.png"></em>
                         <img src="images/tuijian.jpg">
                         <div class="detail">
                             <h4>Think PHP 5.0 博客系统实战项目演练</h4>
@@ -257,6 +261,7 @@
                 <img src="images/pytonshuju.jpg"> </img>
                 <ul class="biancheng_bottom">
                     <li>
+                        <em><img class="hot" src="images/hot.png"></em>
                         <img src="images/shuju.jpg">
                         <div class="detail">
                             <h4>Think PHP 5.0 博客系统实战项目演练</h4>
@@ -264,6 +269,7 @@
                         </div>
                     </li>
                     <li>
+                        <em><img class="hot" src="images/hot.png"></em>
                         <img src="images/shuju.jpg">
                         <div class="detail">
                             <h4>Think PHP 5.0 博客系统实战项目演练</h4>
@@ -271,6 +277,7 @@
                         </div>
                     </li>
                     <li>
+                        <em><img class="hot" src="images/hot.png"></em>
                         <img src="images/shuju.jpg">
                         <div class="detail">
                             <h4>Think PHP 5.0 博客系统实战项目演练</h4>
@@ -278,6 +285,7 @@
                         </div>
                     </li>
                     <li>
+                        <em><img class="hot" src="images/hot.png"></em>
                         <img src="images/shuju.jpg">
                         <div class="detail">
                             <h4>Think PHP 5.0 博客系统实战项目演练</h4>
