--- a/test/土豆/index.html
+++ b/test/土豆/index.html
@@ -15,7 +15,9 @@
             width: 100%;
             height: 100%;
         }
-        .mask{
+        /**利用为元素**/
+        .center-display::after{
+            content: '';
             display: none;
             position: absolute;
             top: 0;
@@ -24,7 +26,7 @@
             height: 100%;
             background: rgba(0, 0, 0, 0.3) url(images/arr.png) no-repeat center;
         }
-        .center-display:hover .mask{
+        .center-display:hover::after{
             display: block;
         }
     </style>
@@ -32,9 +34,6 @@
 <body>
     <div class="center-display">
        <img src="images/taobao-promo.jpg"/>
-       <div class="mask">
-
-       </div>
     </div>
 </body>
 </html>
