--- a/shopping/index.html
+++ b/shopping/index.html
@@ -10,19 +10,191 @@
     <link rel="stylesheet" href="css/common.css"/>
 </head>
 <body>
-    <section class="nav">
-        <div class="center">
-            <div class="fl">品优购欢迎您！&nbsp;请登录&nbsp;<span class="color-red">免费注册</span></div>
-            <ul class="menu fr">
-               <li>我的订单</li>
-               <li class="icon-e903">我的品优购</li>
-               <li>品优购会员</li>
-               <li>企业采购</li>
-               <li class="icon-e903">关注品优购</li>
-               <li class="icon-e903">客户服务</li>
-               <li class="icon-e903">网站导航</li>
-            </ul>
-        </div>       
+    <!-- 快捷导航 -->
+    <section class="shortcut">
+       <div class="wrapper">
+           <div class="loginbar fl">
+                品优购欢迎您！&nbsp
+                <a>请登录&nbsp;</a>
+                <a>免费注册</a>
+           </div>
+           <ul class="fr menulist">
+               <li><a>我的订单</a></li>
+               <li></li>
+               <li><a class="icon-down">我的品优购</a></li>
+               <li></li>
+               <li><a>品优购会员</a></li>
+               <li></li>
+               <li><a>企业采购</a></li>
+               <li></li>
+               <li><a class="icon-down">关注品优购</a></li>
+               <li></li>
+               <li><a class="icon-down">客户服务</a></li>
+               <li></li>
+               <li><a class="icon-down">网站导航</a></li>
+           </ul>
+       </div>
     </section>
+    <header class="header wrapper">
+            <!-- logo -->
+            <div class="logo">
+                <h1>
+                    <a href="index.html" title="品优购">品优购</a>
+                </h1>
+            </div>
+            <!-- 搜索框 -->
+            <div class="search">
+                <input class="input-search" type="search" placeholder="语言开发">
+                <button>搜索</button> 
+                <div class="hotwords">
+                    <a href="#">优惠购首发</a>
+                    <a href="#">亿元优惠</a>
+                    <a href="#">9.9团购</a>
+                    <a href="#">美满99减30</a>
+                    <a href="#">办公用品</a>
+                    <a href="#">电脑</a>
+                    <a href="#">通信</a>
+                </div>
+            </div>
+            <!-- 购物车 -->
+            <div class="shopbar">
+                <a>我的购物车</a>
+                <i class="shop-num">8</i>
+            </div>
+    </header>
+    <nav class="nav">
+        <div class="wrapper">
+            <dl class="dropdown">
+                <dt class="nav-title">  全部商品分类  </dt>
+                <dd class="subnav"> 
+                   <li><a>家用电器</a></li>
+                   <li><a>手机</a>、<a>数码</a>、<a>通信</a></li>
+                   <li><a>电脑</a>、<a>办公</a></li>
+                   <li><a>家居</a>、<a>家具</a>、<a>家装</a>、<a>厨具</a></li>
+                   <li><a>男装</a>、<a>女装</a>、<a>童装</a>、<a>内衣</a></li>
+                   <li><a>个户化妆、<a>清洁用品</a>、<a>宠物</a></li>
+                   <li><a>鞋靴</a>、<a>箱包</a>、<a>珠宝</a>、<a>奢侈品</a></li>
+                   <li><a>运动户外</a>、<a>钟表</a></li>
+                   <li><a>汽车</a>、<a>汽车用品</a></li>
+                   <li><a>母婴</a>、<a>玩具乐器</a></li>
+                   <li><a>食品</a>、<a>酒类</a>、<a>生鲜</a>、<a>特产</a></li>
+                   <li><a>医药保健</a></li>
+                   <li><a>图书</a>、<a>音像</a>、<a>电子书</a></li>
+                   <li><a>彩票</a>、<a>旅行</a>、<a>充值</a>、<a>票务</a></li>
+                   <li><a>理财</a>、<a>众筹</a>、<a>白条</a>、<a>保险</a></li>
+                </dd>
+            </dl>
+            <ul class="right-nav">
+                <li><a>服装城</a></li>
+                <li><a>美妆馆</a></li>
+                <li><a>传智超市</a></li>
+                <li><a>全球购</a></li>
+                <li><a>闪购</a></li>
+                <li><a>团购</a></li>
+                <li><a>拍卖</a></li>
+                <li><a>有趣</a></li>
+            </ul>
+        </div>
+      
+    </nav>
+    <!-- 底部 -->
+    <footer class="footer">
+         <div class="wrapper">
+                 <ul class="shop-service">
+                     <li>
+                         <img class="zhengpin">
+                         <div class="desc">
+                            <h4>正品保障</h4>
+                            <p>正品保障，提供发票</p>
+                         </div>
+                       
+                    </li>
+                    <li>
+                        <img class="wuliu">
+                        <div class="desc">
+                            <h4>急速物流</h4>
+                            <p>急速物流，急速送达</p>
+                        </div>
+                   </li>                   
+                   <li>
+                    <img class="zhengpin">
+                    <div class="desc">
+                        <h4>正品保障</h4>
+                        <p>正品保障，提供发票</p>
+                     </div>
+               </li>
+                   <li>
+                    <img class="zhengpin">
+                    <div class="desc">
+                        <h4>正品保障</h4>
+                        <p>正品保障，提供发票</p>
+                     </div>
+               </li>                    
+               <li>
+                <img class="zhengpin">
+                <div class="desc">
+                    <h4>正品保障</h4>
+                    <p>正品保障，提供发票</p>
+                 </div>
+           </li>
+                 </ul>
+                 <ul class="main-service">
+                     <dl class="service">
+                         <dt>购物指南</dt>
+                         <dd>会员介绍</dd>
+                         <dd>生活旅行/团购</dd>
+                         <dd>常见问题</dd>
+                         <dd>大家电</dd>
+                         <dd>联系客服</dd>
+                     </dl>
+                     <dl class="service">
+                        <dt>购物指南</dt>
+                        <dd>会员介绍</dd>
+                        <dd>生活旅行/团购</dd>
+                        <dd>常见问题</dd>
+                        <dd>大家电</dd>
+                        <dd>联系客服</dd>
+                    </dl>
+                    <dl class="service">
+                        <dt>购物指南</dt>
+                        <dd>会员介绍</dd>
+                        <dd>生活旅行/团购</dd>
+                        <dd>常见问题</dd>
+                        <dd>大家电</dd>
+                        <dd>联系客服</dd>
+                    </dl>
+                    <dl class="service">
+                        <dt>购物指南</dt>
+                        <dd>会员介绍</dd>
+                         <dd>生活旅行/团购</dd>
+                         <dd>常见问题</dd>
+                         <dd>大家电</dd>
+                         <dd>联系客服</dd>
+                    </dl>
+                    <dl class="service">
+                        <dt>购物指南</dt>
+                        <dd>会员介绍</dd>
+                        <dd>生活旅行/团购</dd>
+                        <dd>常见问题</dd>
+                        <dd>大家电</dd>
+                        <dd>联系客服</dd>
+                    </dl>
+                    <dl class="service">
+                        <dt>购物指南</dt>
+                       <dd>
+                           <img src="images/wx_cz.jpg">
+                           <p>品优购购物端</p>
+                       </dd>
+                    </dl>
+                 </ul>
+                 <div class="copyright">
+                    <a>关于我们</a>  |  <a>联系我们</a> |  <a>联系客服</a>  |  <a>商家入驻</a>  |  <a>营销中心</a>  |  <a>手机品优购</a>  |  <a>友情链接</a>|  <a>销售联盟</a>  |  <a>品优购社区</a>  |  <a>品优购公益</a>  |  <a>English Site</a>  |  <a>Contact U</a>
+                    <p>
+                        地址：北京市昌平区建材城西路金燕龙办公楼一层 邮编：100096 电话：400-618-4000 传真：010-82935100 邮箱: zhanghj+itcast.cn <br/>
+                        京ICP备08001421号京公网安备110108007702
+                    </p>
+                 </div>
+         </div>
+    </footer>
 </body>
 </html>
