--- a/shopping/index.html
+++ b/shopping/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/base.css"/>
     <link rel="stylesheet" href="css/common.css"/>
+    <link rel="stylesheet" href="css/index.css"/>
 </head>
 <body>
     <!-- 快捷导航 -->
@@ -95,8 +96,108 @@
                 <li><a>有趣</a></li>
             </ul>
         </div>
-      
     </nav>
+    <main class="wrapper">
+          <div class="main">
+              <div class="lunbotu">
+                  <ul>
+                      <li class="pic"></li>
+                  </ul>
+              </div>
+              <div class="news">
+                   <div class="fast">
+                      <div class="hd">
+                          <h4 class="fl">品优购快报</h4>
+                          <p class="fr">更多</p>
+                      </div> 
+                      <ul class="bd">
+                          <li><a><strong>[特惠]</strong>备战开学季 全民半价购数码</a></li>
+                          <li><a><strong>[特惠]</strong>备战开学季 全民半价购数码</a></li>
+                          <li><a><strong>[特惠]</strong>备战开学季 全民半价购数码</a></li>
+                          <li><a><strong>[特惠]</strong>备战开学季 全民半价购数码</a></li>
+                          <li><a><strong>[特惠]</strong>备战开学季 全民半价购数码</a></li>
+                      </ul>
+                   </div>
+                   <ul class="content">
+                         <li><i class="jlt"></i><p>话费</p></li>
+                         <li><i class="jlt"></i><p>话费</p></li>
+                         <li><i class="jlt"></i><p>话费</p></li>
+                         <li><i class="jlt"></i><p>话费</p></li>
+                         <li><i class="jlt"></i><p>话费</p></li>
+                         <li><i class="jlt"></i><p>话费</p></li>
+                         <li><i class="jlt"></i><p>话费</p></li>
+                         <li><i class="jlt"></i><p>话费</p></li>
+                         <li><i class="jlt"></i><p>话费</p></li>
+                         <li><i class="jlt"></i><p>话费</p></li>
+                         <li><i class="jlt"></i><p>话费</p></li>
+                         <li><i class="jlt"></i><p>话费</p></li>
+                   </ul>
+                   <div class="newpic"></div>
+              </div>
+          </div>
+    </main>
+    <div class="recomm wrapper">
+        <div class="recomm-hd fl">
+            <img>
+            <p>今日推荐</p>
+        </div>
+        <ul class="recomm-bd fr">
+            <li class="rec-img"></li>
+            <li class="rec-img"></li>
+            <li class="rec-img"></li>
+            <li class="rec-img"></li>
+        </ul>
+    </div>
+    <div class="guessulike wrapper">
+       <div class="guess-hd">
+        <h4 class="fl">猜你喜欢</h4> 
+        <p class="fr">换一批</p>
+       </div>
+       <ul class="guess-bd">
+           <li>
+               <img class="guess-pic">
+               <div class="guess-desc">
+                <p>阳光没报新款单肩包女包时尚字母包四件套女</p>
+                <p><span>$</span><span class="price">116.00</span></p>
+               </div>  
+          </li>
+          <li>
+            <img class="guess-pic">
+            <div class="guess-desc">
+             <p>阳光没报新款单肩包女包时尚字母包四件套女</p>
+             <p><span>$</span><span class="price">116.00</span></p>
+            </div>  
+       </li>
+       <li>
+        <img class="guess-pic">
+        <div class="guess-desc">
+         <p>阳光没报新款单肩包女包时尚字母包四件套女</p>
+         <p><span>$</span><span class="price">116.00</span></p>
+        </div>  
+   </li>
+   <li>
+    <img class="guess-pic">
+    <div class="guess-desc">
+     <p>阳光没报新款单肩包女包时尚字母包四件套女</p>
+     <p><span>$</span><span class="price">116.00</span></p>
+    </div>  
+</li>
+<li>
+    <img class="guess-pic">
+    <div class="guess-desc">
+     <p>阳光没报新款单肩包女包时尚字母包四件套女</p>
+     <p><span>$</span><span class="price">116.00</span></p>
+    </div>  
+</li>
+<li>
+    <img class="guess-pic">
+    <div class="guess-desc">
+     <p>阳光没报新款单肩包女包时尚字母包四件套女</p>
+     <p><span>$</span><span class="price">116.00</span></p>
+    </div>  
+</li>
+  </ul>
+    </div>
     <!-- 底部 -->
     <footer class="footer">
          <div class="wrapper">
