--- a/shopping/index.html
+++ b/shopping/index.html
@@ -18,8 +18,8 @@
         <div class="wrapper">
             <div class="loginbar fl">
                 品优购欢迎您！&nbsp
-                <a>请登录&nbsp;</a>
-                <a>免费注册</a>
+                <a href="login.html">请登录&nbsp;</a>
+                <a href="register.html">免费注册</a>
             </div>
             <ul class="fr menulist">
                 <li><a>我的订单</a></li>
