--- a/shopping/order.html
+++ b/shopping/order.html
@@ -45,9 +45,10 @@
                 <a href="index.html" title="品优购">品优购</a>
             </h1>
         </div>
+        <span class="gwc_chinese">购物车</span>
         <!-- 搜索框 -->
         <div class="gwc_search">
-            <input class="input-search" type="search" placeholder="语言开发">
+            <input class="input-search" type="search" placeholder="京东">
             <button>搜索</button>
         </div>  
     </header>
@@ -83,7 +84,7 @@
             <div class="pay_content">
                 <ul class="pay_type fl">
                     <li><span>货到付款</li>
-                    <li><span>微信付款</span></li>
+                    <li class="border_none"><span>微信付款</span></li>
                     <li><span>在线支付</span></li>
                 </ul>
                 <p class="fl">更多>></p>
@@ -124,8 +125,52 @@
                 </ul>
             </div>
         </div>
+        <div class="fapiao">
+            <h4 class="black_wenzi">发票信息</h4>
+            <ul>
+                <li><span>普通发票</span></li>
+                <li><span>个人</span></li>
+                <li><span>明细</span></li>
+                <li><span><a>修改</a></span></li>
+            </ul>
+            <h4 class="yhq">使用优惠/抵用</h4>
+        </div>
     </main>
-   
+    <div class="jiezhang wrapper">
+        <div class="describe">
+            <ul class="desc_left">
+                <li><span>1</span>件商品，总商品金额:</li>
+                <li><span>返现:</span></li>
+                <li><span>运费:</span></li>
+            </ul>
+            <ul class="desc_right">
+                <li><span>$5388.00</span></li>
+                <li><span>-$0.00</span><li>
+                <li><span>$5388.00</span></li>
+            </ul>
+        </div>
+        <div class="print_info">
+            <div class="calc clearfix">
+                <div class="print_desc fl">
+                    <span>应付总额:</span>
+              </div>
+              <div class="print_price fr">
+                  <span>￥</span>
+                  <span class="pay_for_last">
+                      5388.00
+                  </span>
+              </div>
+            </div>
+           
+            <div class="address">
+                <span>寄送至：北京市海淀区三环内 中关村软件园9号楼  收货人：某某某  159****3201
+                </span>
+            </div>
+        </div>
+        <div class="tijiao_order">
+            <button>提交订单</button>
+        </div>
+    </div>
  
     <!-- 底部 -->
     <footer class="footer">
